<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/TitleBar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <ImageButton
        style="@style/TitleBarAction"
        android:contentDescription="@string/descripcion_home"
        android:onClick="onClickHome"
        android:src="@drawable/title_home" />

    <ImageView style="@style/TitleBarSeparator" />

    <TextView
        android:id="@+id/titulo_barra"
        style="@style/TitleBarText" />

    <ImageButton
        style="@style/TitleBarAction"
        android:contentDescription="@string/descripcion_about"
        android:onClick="onClickAbout"
        android:src="@drawable/title_about" />

    <ImageView style="@style/TitleBarSeparator" />

    <ImageButton
        style="@style/TitleBarAction"
        android:contentDescription="@string/descripcion_search"
        android:onClick="onClickSearch"
        android:src="@drawable/title_search" />

</LinearLayout>