<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <TextView
            android:id="@+id/text_columna1_codigo"
            style="@style/TextViewt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1dp"
            android:paddingTop="3dp"
            android:text="@string/codigo"
            android:textSize="16dp" />

        <LinearLayout
            android:id="@+id/layout_col1_codigo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/layout_col1_codigo_mas"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <EditText
                    android:id="@+id/edittext_codigo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/codigo_ejemplo"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:paddingRight="5dp" >

                <Button
                    android:id="@+id/btn_codigo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:enabled="true"
                    android:text="Buscar" />
            </LinearLayout>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/grupo_dia_cod"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone" >

            <RadioButton
                android:id="@+id/radio1_cod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/hoy"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/radio2_cod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manana"
                android:visibility="gone" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gris"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:lines="1"
            android:text="Últimas Busquedas"
            android:textColor="#FFFFFFFF"
            android:textSize="17dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="1"
                android:text="@string/sub_info"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="9" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/sub_hoy"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:baselineAligned="false" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/sub_mnn"
                    android:textSize="18dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_columna1_sin_resultados"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/lista_resultados_reciente"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>