<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright 2012 Xabier Pena & Urko Guinea
 
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
   limitations under the License.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/descripcion_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView
            style="@style/TitleBarText"
            android:text="@string/titulo_resultado" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/descripcion_about"
            android:onClick="onClickActualizar"
            android:src="@drawable/title_refresh"/>

        <ImageView style="@style/TitleBarSeparator" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/descripcion_search"
            android:onClick="onClickBusqueda"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_negro"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_busqueda_resultado_vuelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:lines="1"
            android:textColor="#FFFFFFFF"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_progress_resultado"
        style="@style/Theme.LayoutResultado"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_resultado_progrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Obteniendo datos..." />
    </LinearLayout>
    
       <LinearLayout
        android:id="@+id/layout_resultado_sin_resultado"
        style="@style/Theme.LayoutResultado"
        android:layout_height="fill_parent"
        android:orientation="vertical" 
        android:visibility="gone">

        <TextView
            android:id="@+id/text_resultado_progrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="No hay nigún vuelo que coincida con esos datos" />
    </LinearLayout>

    <ListView
        android:id="@+id/lista_resultados"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>