<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/descripcion_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView
            style="@style/TitleBarText"
            android:text="Preferencias" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/descripcion_about"
            android:onClick="onClickActualizar"
            android:src="@drawable/title_about" />

        <ImageView style="@style/TitleBarSeparator" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/descripcion_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <TextView
        style="@style/TextViewt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Numero máximo de resultados por pantalla" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="40"
        android:progress="10" />

    <TextView
        android:id="@+id/text_seek"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="10" />

    <TextView
        style="@style/TextViewt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Modo de carga de las busquedas guardadas" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(Necesita internet y es más lento)" />

    <RadioGroup
        android:id="@+id/grupo_modo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_prefs0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Dinamico" />

        <RadioButton
            android:id="@+id/radio_prefs1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Manual" />
    </RadioGroup>

</LinearLayout>