<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright 2012 Xabier Pena & Urko Guinea
 
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
   limitations under the License.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/descripcion_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView
            style="@style/TitleBarText"
            android:text="Alarmas" />

        <ImageButton
            android:id="@+id/boton_actualizar_alarmas"
            style="@style/TitleBarAction"
            android:contentDescription="@string/descripcion_about"
            android:onClick="onClickActualizarA"
            android:src="@drawable/title_refresh" />

        <ImageView style="@style/TitleBarSeparator" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/descripcion_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/expandable_alarmas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ExpandableListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alarmas" />

        <LinearLayout
            android:id="@+id/layout_progress_alarmas_alarmas"
            style="@style/Theme.LayoutResultado" >

            <ProgressBar
                android:id="@+id/progressalarmas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_no_hay_alarmas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No ninguna alarma programada" />

        <ListView
            android:id="@+id/lista_resultados_alarmas"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Antiguas Alarmas" />

        <LinearLayout
            android:id="@+id/layout_progress_alarmas_seguimiento"
            style="@style/Theme.LayoutResultado" >

            <ProgressBar
                android:id="@+id/progress_seguimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_no_hay_seguimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No ningún vuelo en seguimiento" />

        <ListView
            android:id="@+id/lista_resultados_seguimiento"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>